# astril

./: .gitignore  Deed - Attribution-NonCommercial-ShareAlike 4.0 International - Creative Commons.html  MANIFEST.in  README.md  pyproject.toml
src/astril/: Training Schedule Specifications.txt  __init__.py  config.py  create_config_files.py  create_segmentation_config.py  data_loading.py  dicom_conversion.py  main.py  merge_seg_volumes.py  model_architecture.py  models_download.py  models_manifest.py  paths.py  preprocess.py  preprocess_brain_mris.py  preprocessing_utils.py  quantify_volumes.py  remap_gt_classes.py  run_segmentation.py  segment_GBM.py  train.py  utils.py  visualize_model.py
src/astril/models/: .gitignore  models.json
